--- a/register.html
+++ b/register.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Registreren</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h2>Registreren</h2>
-  <form action="php/register.php" method="POST">
-    <input type="text" name="username" placeholder="Gebruikersnaam" required>
-    <input type="password" name="password" placeholder="Wachtwoord" required>
-    <button type="submit">Registreren</button>
-  </form>
+  <div class="container mt-5">
+    <h2 class="text-center mb-4">Registreren bij TaskHero</h2>
+    <form action="php/register.php" method="POST" class="mx-auto" style="max-width: 400px;">
+      <div class="mb-3">
+        <label for="username" class="form-label">Gebruikersnaam</label>
+        <input type="text" class="form-control" id="username" name="username" required />
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Wachtwoord</label>
+        <input type="password" class="form-control" id="password" name="password" required />
+      </div>
+      <button type="submit" class="btn btn-custom w-100">Registreren</button>
+    </form>
+  </div>
 </body>
 </html>
