--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inloggen - TaskHero</title>
+  <title>Inloggen</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <div class="container mt-5">
-    <h2 class="text-center mb-4">Inloggen bij TaskHero</h2>
-    <form action="php/login.php" method="POST" class="mx-auto" style="max-width: 400px;">
-      <div class="mb-3">
-        <label for="username" class="form-label">Gebruikersnaam</label>
-        <input type="text" class="form-control" id="username" name="username" required />
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Wachtwoord</label>
-        <input type="password" class="form-control" id="password" name="password" required />
-      </div>
-      <button type="submit" class="btn btn-custom w-100">Inloggen</button>
-    </form>
+ <div class="container mt-5">
+  <h2 class="text-center mb-4">Inloggen bij TaskHero</h2>
+  <form action="php/login.php" method="POST" class="mx-auto" style="max-width: 400px;">
+    <div class="mb-3">
+      <label for="username" class="form-label">Gebruikersnaam</label>
+      <input type="text" class="form-control" id="username" name="username" required />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Wachtwoord</label>
+      <input type="password" class="form-control" id="password" name="password" required />
+    </div>
+    <button type="submit" class="btn btn-custom w-100">Inloggen</button>
+  </form>
+  
+  <p class="text-center mt-3">
+    Nog geen account? <a href="register.html" class="text-primary">Registreer hier</a>
+  </p>
+</div>
+
   </div>
 </body>
 </html>
