--- a/register.html
+++ b/register.html
@@ -23,6 +23,9 @@
       </div>
       <button type="submit" class="btn btn-custom w-100">Registreren</button>
     </form>
+    <p class="text-center mt-3">
+    Al een account? <a href="index.html" class="text-primary">Inloggen</a>
+  </p>
   </div>
 </body>
 </html>
